--- a/App/App.GRRInnovations.TodoManager/App.GRRInnovations.TodoManager.csproj
+++ b/App/App.GRRInnovations.TodoManager/App.GRRInnovations.TodoManager.csproj
@@ -59,6 +59,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="CommunityToolkit.Maui" Version="6.1.0" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.2" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
