feat; create repositorys for appointments

--- a/App/App.GRRInnovations.TodoManager.Infrastructure/App.GRRInnovations.TodoManager.Infrastructure.csproj
+++ b/App/App.GRRInnovations.TodoManager.Infrastructure/App.GRRInnovations.TodoManager.Infrastructure.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Repositories\" />
+    <ProjectReference Include="..\App.GRRInnovations.TodoManager.Domain\App.GRRInnovations.TodoManager.Domain.csproj" />
   </ItemGroup>
 
 </Project>
