feat: created  wrapperbase

--- a/Api/Api.GRRInnovations.TodoManager.Domain/Api.GRRInnovations.TodoManager.Domain.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Domain/Api.GRRInnovations.TodoManager.Domain.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Wrappers\In\" />
+    <Folder Include="Wrappers\Out\" />
+  </ItemGroup>
+
 </Project>
