--- a/Api/Api.GRRInnovations.TodoManager.Domain/Api.GRRInnovations.TodoManager.Domain.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Domain/Api.GRRInnovations.TodoManager.Domain.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -13,6 +13,10 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Interfaces\Api.GRRInnovations.TodoManager.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
