--- a/Api/Api.GRRInnovations.TodoManager/appsettings.Development.json
+++ b/Api/Api.GRRInnovations.TodoManager/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SqlConnectionString": "Host=localhost;Port=5432;Database=api_todo_manager;User Id=postgres;Password=Gg34821450.;"
   }
 }
