--- a/Api/Api.GRRInnovations.TodoManager.Security/Api.GRRInnovations.TodoManager.Security.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Security/Api.GRRInnovations.TodoManager.Security.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+  </ItemGroup>
+
 </Project>
