--- a/Api/Api.GRRInnovations.TodoManager/Api.GRRInnovations.TodoManager.csproj
+++ b/Api/Api.GRRInnovations.TodoManager/Api.GRRInnovations.TodoManager.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Infrastructure\Api.GRRInnovations.TodoManager.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
