--- a/Api/Api.GRRInnovations.TodoManager.Infrastructure/Api.GRRInnovations.TodoManager.Infrastructure.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Infrastructure/Api.GRRInnovations.TodoManager.Infrastructure.csproj
@@ -21,7 +21,9 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
   </ItemGroup>
 
   <ItemGroup>
