--- a/Api/Api.GRRInnovations.TodoManager/Api.GRRInnovations.TodoManager.csproj
+++ b/Api/Api.GRRInnovations.TodoManager/Api.GRRInnovations.TodoManager.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Infrastructure\Api.GRRInnovations.TodoManager.Infrastructure.csproj" />
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Security\Api.GRRInnovations.TodoManager.Security.csproj" />
   </ItemGroup>
 
 </Project>
