feat: modeling for api rest

--- a/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
+++ b/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\App.GRRInnovations.TodoManager.Interfaces\App.GRRInnovations.TodoManager.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
