--- a/App/App.GRRInnovations.TodoManager.Infrastructure/App.GRRInnovations.TodoManager.Infrastructure.csproj
+++ b/App/App.GRRInnovations.TodoManager.Infrastructure/App.GRRInnovations.TodoManager.Infrastructure.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\App.GRRInnovations.TodoManager.Domain\App.GRRInnovations.TodoManager.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ApiCommunic\Controllers\" />
+  </ItemGroup>
+
 </Project>
