--- a/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
+++ b/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\Models\" />
+    <Folder Include="Entities\" />
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
