--- a/App/App.GRRInnovations.TodoManager.Interfaces/App.GRRInnovations.TodoManager.Interfaces.csproj
+++ b/App/App.GRRInnovations.TodoManager.Interfaces/App.GRRInnovations.TodoManager.Interfaces.csproj
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="ApiCommunic\Controllers\" />
+    <Folder Include="ApiTodoManagerCommunic\Models\" />
     <Folder Include="Models\" />
+    <Folder Include="Entities\" />
     <Folder Include="Repositories\" />
     <Folder Include="Persistence\" />
   </ItemGroup>
