--- a/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
+++ b/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
     <Folder Include="Exceptions\" />
+    <Folder Include="Persistence\" />
   </ItemGroup>
 
   <ItemGroup>
