--- a/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
+++ b/App/App.GRRInnovations.TodoManager.Domain/App.GRRInnovations.TodoManager.Domain.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
+    <Folder Include="Models\" />
     <Folder Include="Persistence\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
   <ItemGroup>
