--- a/App/App.GRRInnovations.TodoManager.Infrastructure/App.GRRInnovations.TodoManager.Infrastructure.csproj
+++ b/App/App.GRRInnovations.TodoManager.Infrastructure/App.GRRInnovations.TodoManager.Infrastructure.csproj
@@ -12,6 +12,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.GRRInnovations.TodoManager.Domain\App.GRRInnovations.TodoManager.Domain.csproj" />
+    <ProjectReference Include="..\App.GRRInnovations.TodoManager.Integration.TodoManager.Api\App.GRRInnovations.TodoManager.Integration.TodoManager.Api.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
