--- a/App/App.GRRInnovations.TodoManager.Integration.TodoManager.Api/App.GRRInnovations.TodoManager.Integration.TodoManager.Api.csproj
+++ b/App/App.GRRInnovations.TodoManager.Integration.TodoManager.Api/App.GRRInnovations.TodoManager.Integration.TodoManager.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Clients\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Models\" />
     <Folder Include="Helpers\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
