--- a/App/App.GRRInnovations.TodoManager.Interfaces/App.GRRInnovations.TodoManager.Interfaces.csproj
+++ b/App/App.GRRInnovations.TodoManager.Interfaces/App.GRRInnovations.TodoManager.Interfaces.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Enums\" />
+    <Folder Include="Models\" />
     <Folder Include="Persistence\" />
+    <Folder Include="Repositories\" />
   </ItemGroup>
 
 </Project>
