feat: creating popup for add tasks

--- a/App/App.GRRInnovations.TodoManager/App.GRRInnovations.TodoManager.csproj
+++ b/App/App.GRRInnovations.TodoManager/App.GRRInnovations.TodoManager.csproj
@@ -91,6 +91,9 @@
 	  <MauiXaml Update="Views\FutureView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\Popups\AddTaskPopup.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\SearchView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
@@ -100,6 +103,10 @@
 	  <MauiXaml Update="Views\TodayView.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="PopupViews\" />
 	</ItemGroup>
 
 </Project>
