--- a/Api/Api.GRRInnovations.TodoManager.Application/Api.GRRInnovations.TodoManager.Application.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Application/Api.GRRInnovations.TodoManager.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Domain\Api.GRRInnovations.TodoManager.Domain.csproj" />
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Interfaces\Api.GRRInnovations.TodoManager.Interfaces.csproj" />
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Security\Api.GRRInnovations.TodoManager.Security.csproj" />
+  </ItemGroup>
+
 </Project>
