--- a/Api/Api.GRRInnovations.TodoManager/Api.GRRInnovations.TodoManager.csproj
+++ b/Api/Api.GRRInnovations.TodoManager/Api.GRRInnovations.TodoManager.csproj
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Application\Api.GRRInnovations.TodoManager.Application.csproj" />
     <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Infrastructure\Api.GRRInnovations.TodoManager.Infrastructure.csproj" />
-    <ProjectReference Include="..\Api.GRRInnovations.TodoManager.Security\Api.GRRInnovations.TodoManager.Security.csproj" />
   </ItemGroup>
 
 </Project>
