--- a/Api/Api.GRRInnovations.TodoManager.Security/Api.GRRInnovations.TodoManager.Security.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Security/Api.GRRInnovations.TodoManager.Security.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="BouncyCastle.NetCore" Version="2.2.1" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
 
 </Project>
