--- a/Api/Api.GRRInnovations.TodoManager.Infrastructure/Api.GRRInnovations.TodoManager.Infrastructure.csproj
+++ b/Api/Api.GRRInnovations.TodoManager.Infrastructure/Api.GRRInnovations.TodoManager.Infrastructure.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.3" />
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.0" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.5.1" />
   </ItemGroup>
 
